--- a/public/css/tab-account.css
+++ b/public/css/tab-account.css
@@ -1,8 +1,11 @@
 .email {
     display: inline;
+    font-family: 'Open Sans';
 }
 .user-email {
     float: right;
+    font-family: 'Open Sans';
+    font-size: 16px !important;
 } 
 
 .accountsummary {
