--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -10,7 +10,7 @@
 
 			<div class="list">
  			 <label class="item item-input">
-  		  <input type="text" ng-model="task.name" placeholder="Task Name" style="font-size:16px; color: #444;">
+  		  <input type="text" ng-model="task.name" placeholder="Task Name" maxlength="21" style="font-size:16px; color: #444;">
  			 </label>
 
 				<label class="item item-input item-select" style = "height: 47px;">
