--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -42,7 +42,7 @@
   <div class="mainContainer">
 
   <ion-nav-bar class="bar topnavbar">
-    <ion-nav-back-button class="icon-left button-clear button-light" style="color: white; font-size:15px; margin-right: 25px;">
+    <ion-nav-back-button class="icon-left button-clear button-light" style="color: white; font-size:15px; ">
       Back
     </ion-nav-back-button>
 
