--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -10,7 +10,7 @@
 
 			<div class="list">
  			 <label class="item item-input">
-  		  <input type="text" ng-model="task.name" placeholder="Task Name" maxlength="21" style="font-size:16px; color: #444;">
+  		  <input type="text" ng-model="task.name" placeholder="Task Name" maxlength="50" style="font-size:16px; color: #444;">
  			 </label>
 
 				<label class="item item-input item-select" style = "height: 47px;">
@@ -31,7 +31,7 @@
 				</label>
  -->
 				<label class="item item-input">
-					<textarea ng-model="task.description" placeholder="Details" style="height:100px; font-family:'Open Sans'; font-size:16px;"></textarea>
+					<textarea ng-model="task.description" placeholder="Details" maxlength="500" style="height:100px; font-family:'Open Sans'; font-size:16px;"></textarea>
 				</label>
 			</div>
 		</div>
