--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -19,7 +19,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Shared" badge="badgeCount" ng-controller="SharedCtrl" badge-style="badge " icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world light" href="#/app/shared">
+  <ion-tab title="Shared" badge="badgeCount" ng-controller="SharedCtrl" badge-style="badge badge-assertive" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world light" href="#/app/shared">
 
     <ion-nav-view name="tab-shared"></ion-nav-view>
   </ion-tab>
