redirects to welcome page now on logout

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -27,9 +27,9 @@
 
 		<script type="text/ng-template" id="main.html">
 			<ion-nav-bar class="bar navbar">
-				<ion-nav-back-button class="button-clear" style="color: white; font-size:15px;">
-					<i class="icon-left"></i> Back
-				</ion-nav-back-button>
+    <ion-nav-back-button class="icon-left button-clear button-light" style="color: white; font-size:15px; ">
+      Back
+    </ion-nav-back-button>
 			</ion-nav-bar>
 
 			<ion-nav-view name="welcome"></ion-nav-view>
@@ -39,19 +39,19 @@
 	 <script type="text/ng-template" id="welcome.html">
 			<ion-view title=" ">
 				<ion-content>
-					<div class="logo">
-						<img src="owl.png" alt="logo">
-						</div>
+					<!--<div class="logo">
+						<img src="images/owl.png" alt="logo">
+					</div>-->
 					<div class="welcome-title">
 						Welcome to 
 						<br>
 							<span id="welcometohive">
-								Hive
+								Cahoots
 							</span>
 					</div>
 
 				<div class ="tagline">
-					<p> Your <b>peers</b> know what to do <br> Now, <b>you</b> do too. </p>
+					<p> Your <b>peers</b> know what to do... <br> now <b>you</b> do too. </p>
 				</div>
 
 		<div style="" class="welcome-content">
