--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -49,7 +49,7 @@
 				  <input type="checkbox" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
 				</li>
 
-				<div class="tasks">
+				<div class="tasks" style="overflow: initial;white-space: initial;">
 					<div class="date-title">
 						{{userTask.task.due_date.substr(0, userTask.task.due_date.lastIndexOf('/'))}}
 					</div>
@@ -80,7 +80,7 @@
 				  <input type="checkbox" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
 				</li>
 
-				<div class="tasks">
+				<div class="tasks" style="overflow: initial;white-space: initial;">
 					<div class="date-title">
 						{{userTask.task.due_date.substr(0, userTask.task.due_date.lastIndexOf('/'))}}
 					</div>
