--- a/public/templates/tab-shared.html
+++ b/public/templates/tab-shared.html
@@ -36,12 +36,12 @@
                     <div class="endorsed">
                         <span class="ion-checkmark-round">{{task.endorsed_message}}</span>
                     </div>
-                    <div style="margin-left: auto; margin-right: auto; text-align: center; padding-bottom:10px;">
+                    <div style="margin-left: auto; margin-right: auto; text-align: center; padding-bottom:10px; padding-top:5px;">
                         <div class= "action-buttons">
-                            <button ng-click="accept(task)" class="button button-small button-stable accept" style="line-height: 30px;"><ion class="ion-ios-checkmark-empty">
+                            <button ng-click="accept(task)" class="button button-small button-stable accept" ><ion class="ion-ios-checkmark-empty">
                              </ion>Accept
                             </button>
-                            <button ng-click="decline(task)" class="button button-small button-stable decline" style="line-height: 30px;"><ion class="ion-ios-close-empty"></ion>
+                            <button ng-click="decline(task)" class="button button-small button-stable decline"><ion class="ion-ios-close-empty"></ion>
                                 Decline
                             </button>
                         </div>
