--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -4,7 +4,7 @@
 	<head>
 <!--    <link data-require="ionic@1.0.0-beta6" data-semver="1.0.0-beta6" rel="stylesheet" href="http://code.ionicframework.com/1.0.0-beta.6/css/ionic.css" />
 		<script data-require="ionic@1.0.0-beta6" data-semver="1.0.0-beta6" src="http://code.ionicframework.com/1.0.0-beta.6/js/ionic.bundle.js"></script> -->
-	<title>Hive</title>
+	<title>Cahoots</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 	<meta name="mobile-web-app-capable" content="yes">
