made welcome page super sexier

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -26,7 +26,7 @@
 		<ion-nav-view></ion-nav-view>
 
 		<script type="text/ng-template" id="main.html">
-			<ion-nav-bar class="bar navbar">
+			<ion-nav-bar ng-show="showNavBar" class="bar navbar">
     <ion-nav-back-button class="icon-left button-clear button-light" style="color: white; font-size:15px; ">
       Back
     </ion-nav-back-button>
