welcome page polish

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -12,21 +12,23 @@ body {
 	padding-top: 10px;
 }
 
-.mainContainer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
+@media (min-width: 701px) {
+	.mainContainer {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    max-width: 700px;
+	    margin-left: auto;
+	    margin-right: auto;
 
-    border-style: solid;
-    border-left: 2px solid #ddd; 
-    border-right: 2px solid #ddd; 
-   background-color:  #5C97BF;
+	    border-style: solid;
+	    border-left: 2px solid #ddd; 
+	    border-right: 2px solid #ddd; 
+	   background-color:  #5C97BF;
 
+	}
 }
 h1 {
 	color: white !important;
