--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -6,18 +6,20 @@ body {
 	background-color: #f8f8f8 !important;
 }
 
-.mainContainer {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	max-width: 700px;
-	margin-left: auto;
-	margin-right: auto;
-	border-style: solid;
-	border-left: 2px solid #ddd; 
-	border-right: 2px solid #ddd; 
+@media (min-width: 701px) {
+	.mainContainer {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		max-width: 700px;
+		margin-left: auto;
+		margin-right: auto;
+		border-style: solid;
+		border-left: 2px solid #ddd; 
+		border-right: 2px solid #ddd; 
+	}
 }
 
 /* Navigation Bar */
