--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -26,7 +26,7 @@
 		<ion-nav-view></ion-nav-view>
 
 		<script type="text/ng-template" id="main.html">
-			<ion-nav-bar class="bar navbar" animation="slide-in-up">
+			<ion-nav-bar class="bar navbar">
     <ion-nav-back-button class="icon-left button-clear button-light" style="color: white; font-size:15px; ">
       Back
     </ion-nav-back-button>
@@ -59,7 +59,7 @@
             </div>
             	<div class="buttons">
 					<div style="margin-left: auto; margin-right: auto; text-align: center;">
-					<a  href="#/signup"><input type="submit" value="SIGN UP" class="button button-large welcome-button-signup" ></a>
+					<a nav-transition="none" nav-direction="back" href="#/signup"><input type="submit" value="SIGN UP" class="button button-large welcome-button-signup" ></a>
 					</input>
 					<br>
 
