--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -11,7 +11,8 @@
 
   <link href="ionic/css/ionic.css" rel="stylesheet">
   <link href="ionicons/css/ionicons.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/hivesuggested.css">
+  <link rel="stylesheet" href="css/hivesuggested.css">
+  <link rel="stylesheet" href="css/account-addClass.css">
 
   <link href="ionic/css/ionic.css" rel="stylesheet">
   <link href="ionicons/css/ionicons.css" rel="stylesheet">
