--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -21,8 +21,8 @@
 				</label>
 
 				<label class="item item-input">
-					<span class="due-date">Due Date</span>
-					<input id="due_date" type="date" ng-model="task.due_date" style= "font-family: 'Open Sans'; color: #444; font-size:16px; padding-right:0px;"/>
+					<span class="due-date">Due Date & Time</span>
+					<input id="due_date" type="datetime-local" ng-model="task.due_date" style= "font-family: 'Open Sans'; color: #444; font-size:16px; padding-right:0px;"/>
 				</label>
 
 <!-- 				<label class="item item-input">
