--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -5,6 +5,7 @@
 <!--    <link data-require="ionic@1.0.0-beta6" data-semver="1.0.0-beta6" rel="stylesheet" href="http://code.ionicframework.com/1.0.0-beta.6/css/ionic.css" />
 		<script data-require="ionic@1.0.0-beta6" data-semver="1.0.0-beta6" src="http://code.ionicframework.com/1.0.0-beta.6/js/ionic.bundle.js"></script> -->
 	<title>Cahoots</title>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 	<meta name="mobile-web-app-capable" content="yes">
@@ -12,7 +13,9 @@
 	<link href="../ionic/css/ionic.css" rel="stylesheet">
 	<link href="../ionicons/css/ionicons.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/welcome.css">
-		
+	<link rel="stylesheet" type="text/css" media="only screen and (min-height: 550px), only screen and (max-device-height: 575px)" href="css/medium-device.css" />
+	<link rel="stylesheet" type="text/css" media="only screen and (max-width: 330px), only screen and (max-device-width: 330px)" href="css/small-device.css" />
+
 	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans|Poiret+One' rel='stylesheet' type='text/css'>
 
 	<!-- ionic/angularjs js -->
