--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -4,7 +4,7 @@
 
 			<!-- This Week -->
 			<div class="item item-divider">
-				This Week
+				<ion class="ion-calendar" style="padding-right:3px;"></ion> This Week
 			</div>
 
 			<ion-item ng-repeat="userTask in this_week" class="item item-checkbox item-icon-right">
