class instructor shown now

--- a/public/templates/account-addClass.html
+++ b/public/templates/account-addClass.html
@@ -20,7 +20,7 @@
             </a>
             {{class.name}}
               <div class="professor">
-              Last, First
+              {{class.instructor}}
               </div>
           </div>
         </div>
