--- a/public/templates/tab-account.html
+++ b/public/templates/tab-account.html
@@ -32,7 +32,7 @@
               {{class.name}}  
               <a ng-click="deleteClass(class)" class="trash-icon item-icon-right"><i class="icon ion-ios-close-outline"></i>
                             <div class="professorname">
-              Last, First
+              {{class.instructor}}
               </div></a>
              </div>
 
