fixed endorsed message

--- a/public/templates/tasks-detail.html
+++ b/public/templates/tasks-detail.html
@@ -36,7 +36,7 @@
 		   
 		   <div class="task-detail-endorsed">
 
-                        <span class="ion-checkmark-round" style="padding-right:3px;"></span>by {{task.shareCount}}  students
+                        <span class="ion-checkmark-round" style="padding-right:3px;"></span>{{task.endorsed_message}}
 
 
 		    </div>
