--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -7,7 +7,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	height: 130px;
+	height: 150px;
 	margin-bottom: -20px;
 	padding-top: 10px;
 }
@@ -45,7 +45,7 @@ h1 {
 
 .welcome-title {
 	font-family: 'Poiret One';
-	font-size: 50px;
+	font-size: 60px;
 	line-height: 45px;
 	text-align: center;
 
@@ -58,7 +58,7 @@ h1 {
     text-align: center;	
     padding-bottom: 40px;
    	font-family: 'Open Sans';
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 25px;
 	color:#3a7094 ;
 }
@@ -110,7 +110,8 @@ input[type="text"], textarea {
 }
 
 .ion-ios-world {
-	font-size: 44px;
+	font-size: 48px;
+	margin-top: 10px !important;
 	padding-left: 20px;
 
 }
@@ -124,24 +125,24 @@ input[type="text"], textarea {
 	margin-top: -45px;
 	width:98%;
 	font-family: 'Open Sans';
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 25px;	
 }
 
 
 .ion-ios-list-outline {
-	font-size: 44px;
+	font-size: 48px;
 	padding-left: 20px;
 
 }
 
 #todolist{
 	padding-left:70px;
-	margin-top: -45px;
+	margin-top: -56px;
 	padding-bottom: 40px;
 	width:98%;
 	font-family: 'Open Sans';
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 25px;	
 }
 
