changed intro page wording

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -58,7 +58,7 @@
             <p id="shared"> All your tasks, for all your classes in one place.</p>
 						<br>
           <i class="ion-ios-world"></i>
-            <p id="todolist"> Add tasks your classmates share with one click, and share tasks of your own! </p>
+            <p id="todolist"> Add tasks your classmates share with one click.</p>
             </div>
             	<div class="buttons">
 					<div style="margin-left: auto; margin-right: auto; text-align: center;">
