--- a/public/templates/tab-tasks.html
+++ b/public/templates/tab-tasks.html
@@ -17,8 +17,7 @@
 				  <input type="checkbox" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
 				</li>
 
-
-				<div class="tasks" style="overflow: initial;white-space: initial;">
+				<div class="tasks" ng-if="!userTask.is_finished" style="overflow: initial;white-space: initial;">
 					<div class="date-title">
 						{{userTask.day_of_the_week.substr(0, 3)}}
 					</div>
@@ -29,6 +28,20 @@
 						{{userTask.task.class.name}}
 					</div>
 				</div>
+
+				<!-- Completed Tasks checked off-->
+				<div class="tasks" ng-if="userTask.is_finished" style="overflow: initial;white-space: initial;">
+					<div class="date-title-completed">
+						{{userTask.day_of_the_week.substr(0, 3)}}
+					</div>
+					<div class="task-title-completed">
+						{{userTask.task.name}}
+					</div>
+					<div class="course-title-completed">
+						{{userTask.task.class.name}}
+					</div>
+				</div>
+				<!-- ************************************* -->
 
 				<i ng-click="taskDetail(userTask)" class="icon ion-chevron-right icon-accessory"></i>
 			</ion-item>
@@ -49,7 +62,7 @@
 				  <input type="checkbox" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
 				</li>
 
-				<div class="tasks" style="overflow: initial;white-space: initial;">
+				<div class="tasks"  ng-if="!userTask.is_finished" style="overflow: initial;white-space: initial;">
 					<div class="date-title">
 						{{userTask.task.due_date.substr(0, userTask.task.due_date.lastIndexOf('/'))}}
 					</div>
@@ -60,6 +73,21 @@
 						{{userTask.task.class.name}}
 					</div>
 				</div>
+
+				<!-- Completed Tasks checked off-->
+				<div class="tasks"  ng-if="userTask.is_finished" style="overflow: initial;white-space: initial;">
+					<div class="date-title-completed">
+						{{userTask.task.due_date.substr(0, userTask.task.due_date.lastIndexOf('/'))}}
+					</div>
+					<div class="task-title-completed">
+						{{userTask.task.name}}
+					</div>
+					<div class="course-title-completed">
+						{{userTask.task.class.name}}
+					</div>
+				</div>
+				<!-- ************************************* -->
+
 
 				<i ng-click="taskDetail(userTask)" class="icon ion-chevron-right icon-accessory"></i>
 			</ion-item>
@@ -80,7 +108,7 @@
 				  <input type="checkbox" ng-model="userTask.is_finished" ng-change="updateUserTask(userTask)">
 				</li>
 
-				<div class="tasks" style="overflow: initial;white-space: initial;">
+				<div class="tasks" ng-if="!userTask.is_finished" style="overflow: initial;white-space: initial;">
 					<div class="date-title">
 						{{userTask.task.due_date.substr(0, userTask.task.due_date.lastIndexOf('/'))}}
 					</div>
@@ -91,6 +119,20 @@
 						{{userTask.task.class.name}}
 					</div>
 				</div>
+
+				<!-- Completed Tasks checked off-->
+				<div class="tasks" ng-if="userTask.is_finished" style="overflow: initial;white-space: initial;">
+					<div class="date-title-completed">
+						{{userTask.task.due_date.substr(0, userTask.task.due_date.lastIndexOf('/'))}}
+					</div>
+					<div class="task-title-completed">
+						{{userTask.task.name}}
+					</div>
+					<div class="course-title-completed">
+						{{userTask.task.class.name}}
+					</div>
+				</div>
+				<!-- ************************************* -->
 
 				<i ng-click="taskDetail(userTask)" class="icon ion-chevron-right icon-accessory"></i>
 			</ion-item>
