added delete task

--- a/public/templates/tasks-detail.html
+++ b/public/templates/tasks-detail.html
@@ -1,17 +1,4 @@
-<!--<ion-view view-title="Dashboard">
-	<ion-content>
-		<div class="list">
 
-		This Week 
-			<div class="item item-divider">
-				This Week
-<!-- 				<i class="ion-chevron-down" style="float:right;"></i>
- -->		<!--	</div>
-
-
-		</div>
-	</ion-content>-->
-</ion-view>
 	<ion-view view-title="Task Details">
 	<ion-content class="padding">
 
@@ -40,8 +27,8 @@
 
 
 		    </div>
-		    <div class="task-detail-delete">
-		    <button class="button button-small trash">
+		    <div  ng-click="deleteTask(task)" class="task-detail-delete">
+		    <button  class="button button-small trash">
 		    <a class="item-icon trash-button" href="#">
 		      <i class="icon ion-trash-a"> Delete</i>
 		    </a>
